# golitex_test

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Privacy_Policy.md  README.md  python_litex_demo.py
.github/workflows/: ci.yml  deploy.yml  examples.yml
assets/: logo.py  run_litexpy_checks.py  verifier_flow.mmd
docs/: FAQ.md  Litex_vs_Lean.md  Manual.md  Setup.md  中文简要介绍.md
docs/Tutorial/: .order  How_Are_Facts_Verified.md
examples/: README.md  tmp.lit
examples/00_first_steps/: calculation.lit  chain_fact.lit  equal_by_resolve.lit  equality.lit  example_in_readme.lit  linear_equation.lit  rational_expression_simplification.lit
examples/01_proof_patterns/: and_fact.lit  atomic_fact.lit  by_axiom_of_choice.lit  by_cases.lit  by_contra.lit  by_enumerate_closed_range.lit  by_enumerate_finite_set.lit  by_enumerate_range.lit  by_extension.lit  by_fn.lit  by_fn_set.lit  by_for.lit  by_induc.lit  by_induc_example1.lit  by_induc_example2.lit  by_symmetric_reflexive_antisymmetric_prop.lit  by_transitive_prop.lit  by_tuple.lit  by_zorn_lemma.lit  claim.lit  exist.lit  exist_fact_that_contains_forall.lit  forall_in_forall.lit  have_obj_by_exist_facts.lit  inline_forall.lit  logic.lit  max_min_bounds.lit  (+16 more)
scripts/: build_dataset_current_data.py  dataset_review_dashboard.html  update_external_repos.sh
src/: debug_test.rs  lib.rs  main.rs  main_test.rs  prelude.rs
yaoge/: chapter1_litex_routes.json  chapter1_litex_routes.md  extract_probability_theorems.py  generate_chapter1_litex_files.py  materialize_chapter1_litex_attempts.py  run_chapter1_litex_attempts.py
(+497 files in other folders)
